--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -299,7 +299,7 @@ header {
   width: 100%;
   color: #f2a11c;
   padding: 1rem 1rem;
-  background-image: url(/assets/image-1-mobile@2x.jpg);
+  background-image: url(https://maclapinski.github.io/Bikerland2/assets/image-1-mobile@2x.jpg);
 }
 
 header h1 {
@@ -483,7 +483,7 @@ header .hero__scroll .chevron.left:before {
   display: flex;
   background-size: cover;
   background-position: center;
-  background-image: url("/assets/image-2.jpg");
+  background-image: url("https://maclapinski.github.io/Bikerland2/assets/image-2.jpg");
 }
 
 .mission {
@@ -520,7 +520,7 @@ header .hero__scroll .chevron.left:before {
   display: flex;
   background-size: cover;
   background-position: center;
-  background-image: url("/assets/image-7.jpg");
+  background-image: url("https://maclapinski.github.io/Bikerland2/assets/image-7.jpg");
 }
 
 .alissa {
@@ -655,7 +655,7 @@ header .hero__scroll .chevron.left:before {
 
 @media screen and (min-width: 1200px) {
   header {
-    background-image: url(/assets/image-1.jpg) !important;
+    background-image: url(https://maclapinski.github.io/Bikerland2/assets/image-1.jpg) !important;
   }
   header h1 {
     font-size: 11vw !important;
@@ -722,4 +722,4 @@ footer {
   padding: 1rem;
   color: #1f2022;
 }
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=style.css.map */
