--- a/styles/scss/_mission.scss
+++ b/styles/scss/_mission.scss
@@ -5,6 +5,6 @@
     @include text-styling;
   }
   &-img {
-    @include image-styling("/assets/image-7.jpg");
+    @include image-styling("https://maclapinski.github.io/Bikerland2/assets/image-7.jpg");
   }
 }
