--- a/styles/scss/_responsive.scss
+++ b/styles/scss/_responsive.scss
@@ -83,7 +83,7 @@
 
 @include media-xl {
   header {
-    background-image: url(/assets/image-1.jpg) !important;
+    background-image: url(https://maclapinski.github.io/Bikerland2/assets/image-1.jpg) !important;
 
     h1 {
       font-size: 11vw !important;
