--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -299,7 +299,7 @@ header {
   width: 100%;
   color: #f2a11c;
   padding: 1rem 1rem;
-  background-image: url(https://maclapinski.github.io/Bikerland2/assets/image-1-mobile@2x.jpg);
+  background-image: url(https://maclapinski.github.io/Bikerland/assets/image-1-mobile@2x.jpg);
 }
 
 header h1 {
@@ -483,7 +483,7 @@ header .hero__scroll .chevron.left:before {
   display: flex;
   background-size: cover;
   background-position: center;
-  background-image: url("https://maclapinski.github.io/Bikerland2/assets/image-2.jpg");
+  background-image: url("https://maclapinski.github.io/Bikerland/assets/image-2.jpg");
 }
 
 .mission {
@@ -520,7 +520,7 @@ header .hero__scroll .chevron.left:before {
   display: flex;
   background-size: cover;
   background-position: center;
-  background-image: url("https://maclapinski.github.io/Bikerland2/assets/image-7.jpg");
+  background-image: url("https://maclapinski.github.io/Bikerland/assets/image-7.jpg");
 }
 
 .alissa {
@@ -574,6 +574,57 @@ header .hero__scroll .chevron.left:before {
   display: block;
 }
 
+.links {
+  width: 100%;
+  height: 100%;
+  padding: 30px 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #ffffff;
+  background-position: center right;
+  background-size: cover;
+  background-image: url("https://maclapinski.github.io/Bikerland/assets/image-5.jpg");
+}
+
+.links i {
+  font-size: 3rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.links div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 5vw;
+}
+
+.links h2 {
+  color: #f2a11c;
+}
+
 @media screen and (min-width: 375px) {
   header h1 {
     font-size: 17vw !important;
@@ -592,6 +643,13 @@ header .hero__scroll .chevron.left:before {
   header h1 {
     font-size: 16vw !important;
     margin-top: 31vh !important;
+  }
+  .links {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    height: 40vh;
   }
 }
 
@@ -655,7 +713,7 @@ header .hero__scroll .chevron.left:before {
 
 @media screen and (min-width: 1200px) {
   header {
-    background-image: url(https://maclapinski.github.io/Bikerland2/assets/image-1.jpg) !important;
+    background-image: url(https://maclapinski.github.io/Bikerland/assets/image-1.jpg) !important;
   }
   header h1 {
     font-size: 11vw !important;
