--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -625,6 +625,187 @@ header .hero__scroll .chevron.left:before {
   color: #f2a11c;
 }
 
+.the-gram {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.the-gram-title {
+  margin-top: 5rem;
+  margin-bottom: 2rem;
+}
+
+.the-gram-images {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 90vw;
+  margin: 2rem auto 3rem;
+}
+
+.the-gram-images .the-gram-image {
+  margin: 20px;
+}
+
+.the-gram-images .the-gram-image img {
+  width: 75vw;
+  margin: auto;
+}
+
+nav {
+  margin: 1rem auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+nav ul li {
+  margin: 1rem 1rem;
+}
+
+nav ul li:hover {
+  border-bottom: 4px solid #f2a11c;
+}
+
+.contact {
+  width: 100%;
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+}
+
+.contact h2 {
+  color: #f2a11c;
+  margin-bottom: 1rem;
+}
+
+.contact-text {
+  margin: 1rem auto;
+}
+
+.contact .subscribe-container {
+  width: 100%;
+  max-width: 350px;
+  margin: 1rem auto 2rem;
+}
+
+.copyright {
+  background-color: #000000;
+}
+
+.copyright p {
+  color: #4a4a4a;
+  text-align: center;
+  font-size: 1.5rem;
+  padding: 10px;
+}
+
+.email {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+/* form styling */
+label {
+  font-size: 1rem;
+}
+
+form input {
+  font-size: 1rem;
+  height: 40px;
+  margin: 0 auto;
+}
+
+input[type=submit] {
+  cursor: pointer;
+  width: 90%;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #1f2022;
+  background-color: #F2A11C;
+  border: #F2A11C;
+  margin-top: 15px;
+  padding: 7px 10px;
+}
+
+input[type=email] {
+  width: 90%;
+  border: none;
+  padding: 7px 25px;
+  margin-top: 15px;
+}
+
+input[type=email]::-webkit-input-placeholder {
+  font-size: 1rem;
+  color: #1F2022;
+  opacity: 0.9;
+  text-align: center;
+}
+
+input[type=email]:-ms-input-placeholder {
+  font-size: 1rem;
+  color: #1F2022;
+  opacity: 0.9;
+  text-align: center;
+}
+
+input[type=email]::-ms-input-placeholder {
+  font-size: 1rem;
+  color: #1F2022;
+  opacity: 0.9;
+  text-align: center;
+}
+
+input[type=email]::placeholder {
+  font-size: 1rem;
+  color: #1F2022;
+  opacity: 0.9;
+  text-align: center;
+}
+
 @media screen and (min-width: 375px) {
   header h1 {
     font-size: 17vw !important;
@@ -650,6 +831,12 @@ header .hero__scroll .chevron.left:before {
         -ms-flex-direction: row;
             flex-direction: row;
     height: 40vh;
+  }
+  .contact {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
 }
 
@@ -709,6 +896,16 @@ header .hero__scroll .chevron.left:before {
   .alissa-img img {
     max-width: 75%;
   }
+  .the-gram-images {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .contact {
+    width: 80%;
+    max-width: 1200px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -733,6 +930,60 @@ header .hero__scroll .chevron.left:before {
   }
 }
 
+@media screen and (min-width: 1600px) {
+  .about {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .about-text {
+    width: 50%;
+    text-align: left;
+    padding-left: 20%;
+    padding-right: 5%;
+  }
+  .about-img {
+    width: 50%;
+    height: 40vw;
+  }
+  .mission {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .mission-text {
+    width: 50%;
+    text-align: left;
+    padding-left: 5%;
+    padding-right: 20%;
+  }
+  .mission-img {
+    width: 50%;
+    height: 40vw;
+  }
+  .alissa {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    padding-top: 3rem;
+  }
+  .alissa-text {
+    width: 70%;
+    text-align: left;
+    padding-left: 5%;
+    padding-right: 20%;
+  }
+  .alissa-img {
+    width: 30%;
+  }
+  .alissa-img img {
+    max-width: 75%;
+  }
+}
+
 body {
   background: #ffffff;
   color: #1f2022;
@@ -740,11 +991,6 @@ body {
   font-family: "Catamaran", sans-serif;
   font-size: 20px;
   line-height: 29px;
-}
-
-main {
-  height: 100%;
-  width: 100%;
 }
 
 main .read-more {
@@ -772,12 +1018,21 @@ main .read-more:hover {
 }
 
 footer {
-  font-size: 1rem;
-  position: fixed;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   bottom: 0.4rem;
   right: 1rem;
   text-align: right;
-  padding: 1rem;
-  color: #1f2022;
+  color: #ffffff;
+  background-color: #1f2022;
 }
 /*# sourceMappingURL=style.css.map */
