--- a/styles/scss/_about.scss
+++ b/styles/scss/_about.scss
@@ -1,10 +1,46 @@
 .about {
-  @include section-styling;
+  background-color: $lightGrey;
   flex-direction: column-reverse;
+
+  @include section-styling;
+
   &-text {
     @include text-styling;
   }
+
   &-img {
     @include image-styling("https://maclapinski.github.io/Bikerland/assets/image-2.jpg");
   }
 }
+
+// 1024px tablet and up
+@include media-lg {
+
+  .about {
+    flex-direction: row;
+
+    &-text {
+      width: 50%;
+      max-width: 600px;
+      padding: 3rem 4rem;
+      margin-left: auto;
+      text-align: left;
+    }
+
+    &-img {
+      width: 50%;
+      height: 40vw;
+    }
+  }
+}
+
+@include media-xxl {
+  
+  .about {
+
+    &-text {
+      padding-right: 80px;
+    }
+  }
+}
+
