--- a/styles/scss/_alissa.scss
+++ b/styles/scss/_alissa.scss
@@ -1,27 +1,58 @@
 .alissa {
-  @include section-styling;
+  padding: 50px 0;
+  background-color: $white;
   flex-direction: column;
-  background-color: $lightGrey;
+
+  @include section-styling;
 
   &-text {
-    width: 100%;
+    display: flex;
+    float: left;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
     @include text-styling;
 
     p {
       text-align: left;
     }
   }
+
   &-img {
-    // height: 40vw;
-    display: flex;
-    width: 90%;
-    // padding-top: 10vw;
-    justify-content: flex-end;
-    align-items: flex-start;
+    float: left;
+
     img {
+      display: block;
       max-width: 100%;
       height: auto;
-      display: block;
     }
+  }
+}
+
+// 1024px tablet and up
+@include media-lg {
+
+  .alissa {
+    flex-direction: row;
+
+    &-text {
+      width: calc(((100% - 40px) / 3) * 2);
+      padding: 3rem 0;
+      margin-left: 30px;
+      text-align: left;
+      align-items: flex-start;
+    }
+
+    &-img {
+      width: calc((100% - 40px) / 3);
+    }
+  }
+}
+
+@include media-xl {
+  
+  .alissa {
+    padding: 100px 0;
   }
 }
