--- a/styles/scss/_footer.scss
+++ b/styles/scss/_footer.scss
@@ -1,84 +1,119 @@
-nav {
-//   width: 60%;
-  margin: 1rem auto;
-  display: flex;
-  justify-content: center;
-  ul {
+footer{
+  nav {
     display: flex;
+    margin: 1rem auto;
     justify-content: center;
-    li {
-      margin: 1rem 1rem;
+    ul {
+      display: flex;
+      justify-content: center;
+      li {
+        margin: 1rem 1rem;
+      }
+    }
+  }
+  .contact {
+    display: flex;
+    width: 100%;
+    margin: auto;
+    text-align: center;
+    flex-direction: column;
+    h2 {
+      margin-bottom: 1rem;
+      color: $squash;
+    }
+    &-text {
+      margin: 1rem auto;
+    }
+    .subscribe-container {
+      width: 100%;
+      max-width: 550px;
+      margin: 1rem auto 2rem;
+      text-align: center;
+    }
+  }
+  .copyright {
+    background-color: #000000;
+    p {
+      padding: 10px;
+      color: $darkGrey;
+      font-size: 1.5rem;
+      text-align: center;
+    }
+  }
+
+  .email {
+    display: flex;
+    flex-direction: column;
+  }
+
+  /* form styling */
+  label {
+    font-size: 1rem;
+  }
+
+  form input {
+    height: 40px;
+    margin: 0 auto;
+    font-size: 1rem;
+  }
+
+  input[type="submit"] {
+    width: 90%;
+    min-width: 300px;
+    padding: 7px 10px;
+    border: #f2a11c;
+    margin-top: 15px;
+    background-color: #f2a11c;
+    color: #1f2022;
+    font-weight: 700;
+    cursor: pointer;
+    text-transform: uppercase;
+  }
+
+  input[type="email"] {
+    width: 90%;
+    min-width: 300px;
+    padding: 7px 25px;
+    border: none;
+    margin-top: 15px;
+  }
+
+  input[type="email"]::placeholder {
+    color: #1f2022;
+    opacity: 0.9;
+    font-size: 1rem;
+    text-align: center;
+  } 
+   
+  // 1024px tablet and up
+  @include media-lg {
+
+    .contact {
+      max-width: 1200px;
+      flex-direction: row;
+
+      .contact-text {
+        text-align: left;
+      }
+
+      .subscribe-container {
+        width: auto;
+        text-align: left;
+      }
+
+      .email-input {
+        display: flex;
+        input[type="submit"] {
+          max-width: 150px;
+          min-width: auto;
+        }
+
+        input[type="email"]::placeholder {
+          text-align: left;
+        }
+      }
     }
   }
 }
-.contact {
-  width: 100%;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  h2 {
-    color: $squash;
-    margin-bottom: 1rem;
-  }
-  &-text {
-    margin: 1rem auto;
-  }
-  .subscribe-container {
-    width: 100%;
-    max-width: 350px;
-    margin: 1rem auto 2rem;
-  }
-}
-.copyright {
-  background-color: #000000;
-  p {
-    color: $darkGrey;
-    text-align: center;
-    font-size: 1.5rem;
-    padding: 10px;
-  }
-}
-
-.email {
-  display: flex;
-  flex-direction: column;
-}
-
-/* form styling */
-label {
-    font-size: 1rem;
-}
-
-form input {
-    font-size: 1rem;
-    height: 40px;
-    margin: 0 auto;
-}
-
-input[type=submit] {
-    cursor: pointer;
-    width: 90%;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: #1f2022;
-    background-color: #F2A11C;
-    border: #F2A11C;
-    margin-top: 15px;
-    padding: 7px 10px;
-}
-
-input[type=email] {
-    width: 90%;
-    border: none;
-    padding: 7px 25px;
-    margin-top: 15px;
-}
-
-input[type=email]::placeholder {
-    font-size: 1rem;
-    color: #1F2022;
-    opacity: 0.9;
-    text-align: center;
-}
+ 
 
