nav text color fix

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -514,7 +514,7 @@ header .hero__scroll .chevron.left:before {
   header .social-icons {
     display: none;
   }
-  header nav a {
+  header nav ul li a {
     color: #1f2022;
   }
   header i.fa-bars {
