--- a/styles/scss/_nav-and-header.scss
+++ b/styles/scss/_nav-and-header.scss
@@ -210,7 +210,7 @@ header {
       display: none;
     }
 
-    nav a{
+    nav ul li a{
       color: $darkErGrey;
     }
 
@@ -268,11 +268,8 @@ header {
     }
     .social-icons {
 
-      a {
-
-        i {
-          font-size: 40px !important;
-        }
+      a i {
+        font-size: 40px !important;
       }
     }
   }
