--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -303,7 +303,6 @@ header {
   text-align: center;
   overflow: hidden;
   height: 101vh;
-  width: 100%;
   color: #f2a11c;
   padding: 1rem 1rem;
   background-image: url(https://maclapinski.github.io/Bikerland/assets/image-1-mobile@2x.jpg);
@@ -568,7 +567,7 @@ header .hero__scroll .chevron.left:before {
 
 @media screen and (min-width: 1200px) {
   header {
-    background-image: url(https://maclapinski.github.io/Bikerland/assets/image-1.jpg) !important;
+    background-image: url(https://maclapinski.github.io/Bikerland/assets/image-1.jpg);
   }
   header h1 {
     font-size: 11vw !important;
