--- a/styles/scss/_nav-and-header.scss
+++ b/styles/scss/_nav-and-header.scss
@@ -10,7 +10,7 @@ header {
   height: 101vh;
   color: $squash;
   padding: 1rem 1rem;
-  background-image: url(https://maclapinski.github.io/Bikerland/assets/image-1-mobile@2x.jpg);
+  background-image: url(https://maclapinski.github.io/Bikerland/assets/image-1-mobile@2x.avif);
 
   h1 {
     font-size: 3.8rem;
