--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -279,20 +279,32 @@ img {
 }
 
 header {
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  text-align: center;
-  overflow: hidden;
-  height: 101vh;
   color: #f2a11c;
+  display: flex;
+  flex-direction: column;
+  height: 101vh;
+  justify-content: center;
+  overflow: hidden;
+  overflow: hidden;
   padding: 1rem 1rem;
-  background-image: url(https://maclapinski.github.io/Bikerland/assets/image-1-mobile@2x.avif);
+  position: relative;
+  text-align: center;
   /* hamburger menu styling */
   /* social icons styling */
+}
+
+header::before {
+  background: url(https://maclapinski.github.io/Bikerland/assets/image-1-mobile@2x.avif) no-repeat center center;
+  background-color: white;
+  background-size: cover;
+  content: ' ';
+  height: 100%;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  will-change: transform;
+  z-index: -1;
 }
 
 header h1 {
@@ -302,8 +314,8 @@ header h1 {
 
 header nav {
   display: flex;
-  margin: 1rem auto;
   justify-content: center;
+  margin: 1rem auto;
 }
 
 header nav ul {
@@ -325,17 +337,17 @@ header nav ul li a:hover, header nav ul li a:focus {
 
 header i.fa-bars,
 header input[type='checkbox'] {
+  border-radius: 5px;
+  color: white;
+  cursor: pointer;
   display: none;
+  font-size: 3rem;
+  padding: 0 3px;
   position: fixed;
   right: 30px;
+  text-shadow: 0px 3px 5px #1f2022;
   top: 20px;
   z-index: 10;
-  text-shadow: 0px 3px 5px #1f2022;
-  color: white;
-  font-size: 3rem;
-  border-radius: 5px;
-  padding: 0 3px;
-  cursor: pointer;
 }
 
 header .header-menu-social-icons {
@@ -343,12 +355,12 @@ header .header-menu-social-icons {
 }
 
 header .social-icons {
-  position: relative;
   bottom: 165px;
-  left: 20px;
-  width: 40px;
   font-size: 2.5rem;
+  left: 20px;
   margin: 0 0 0 auto;
+  position: relative;
+  width: 40px;
 }
 
 header .social-icons li {
@@ -362,20 +374,20 @@ header .social-icons a:focus {
 }
 
 header .social-icons {
-  position: absolute;
+  bottom: 1rem;
   display: flex;
   flex-direction: column;
-  bottom: 1rem;
+  position: absolute;
   right: 1rem;
 }
 
 header .social-icons a {
-  display: flex;
   align-items: center;
-  justify-content: center;
-  padding: 4px;
-  margin: 3px 0px;
   color: #f2a11c;
+  display: flex;
+  justify-content: center;
+  margin: 3px 0px;
+  padding: 4px;
   transition: all 0.5s ease-in-out;
 }
 
@@ -393,14 +405,6 @@ header .hero__scroll {
   padding-bottom: 80px;
 }
 
-header .hero__scroll .chevron {
-  display: block;
-  color: #f2a11c;
-  margin: 0 auto;
-  width: 50px;
-  animation: pulse 1s infinite;
-}
-
 @keyframes pulse {
   0% {
     transform: translate(0, 0);
@@ -413,17 +417,25 @@ header .hero__scroll .chevron {
   }
 }
 
+header .hero__scroll .chevron {
+  animation: pulse 1s infinite;
+  color: #f2a11c;
+  display: block;
+  margin: 0 auto;
+  width: 50px;
+}
+
 header .hero__scroll .chevron::before {
   border-style: solid;
   border-width: 0.25em 0.25em 0 0;
   content: '';
   display: inline-block;
-  height: 2rem;
-  width: 2rem;
   font-size: 2rem;
+  height: 2rem;
   position: relative;
   transform: rotate(-45deg);
   vertical-align: top;
+  width: 2rem;
 }
 
 header .hero__scroll .chevron.right:before {
@@ -461,21 +473,21 @@ header .hero__scroll .chevron.left:before {
     display: inherit;
   }
   header .header-menu {
-    position: fixed;
-    display: block;
-    z-index: 10;
     background-color: white;
-    height: 100vh;
-    width: 33vw;
-    top: 0;
-    left: -33vw;
-    transition: all 0.5s ease;
     color: black;
+    display: block;
+    height: 100vh;
+    left: -33vw;
+    position: fixed;
+    top: 0;
+    transition: all 0.5s ease;
+    width: 33vw;
+    z-index: 10;
   }
   header .header-menu li,
   header .header-menu-social-icons {
-    display: block;
     border-bottom: 2px solid #1f2022;
+    display: block;
     margin: 0;
     padding: 20px 0;
   }
@@ -490,8 +502,8 @@ header .hero__scroll .chevron.left:before {
   header .header-menu li:focus-within a,
   header .header-menu a:hover,
   header .header-menu a:active {
-    color: #f2a11c;
     border-bottom: none;
+    color: #f2a11c;
   }
 }
 
@@ -506,25 +518,26 @@ header .hero__scroll .chevron.left:before {
 }
 
 @media screen and (min-width: 1200px) {
-  header {
-    background-image: url(https://maclapinski.github.io/Bikerland/assets/image-1.avif);
+  header::before {
+    background: url(https://maclapinski.github.io/Bikerland/assets/image-1.avif) no-repeat center center;
+    background-size: cover;
   }
   header h1 {
     font-size: 11vw !important;
     margin-top: 36vh !important;
   }
   header .hero__scroll .chevron::before {
+    font-size: 2.5rem;
     height: 2.5rem;
     width: 2.5rem;
-    font-size: 2.5rem;
   }
   header .nav {
     display: block;
   }
   header .social-icons {
     bottom: 50vh !important;
-    transform: translateY(50%);
     right: 3rem !important;
+    transform: translateY(50%);
   }
 }
 
@@ -899,6 +912,10 @@ body {
   font-family: "Catamaran", sans-serif;
   font-size: 20px;
   line-height: 29px;
+}
+
+section {
+  background-color: #ffffff;
 }
 
 main .read-more {
