--- a/styles/scss/_links.scss
+++ b/styles/scss/_links.scss
@@ -9,21 +9,21 @@
   color: $white;
   background-position: center right;
   background-size: cover;
-  background-image: url("https://maclapinski.github.io/Bikerland/assets/image-5.jpg");
-  
+  background-image: url('/assets/image-5.avif');
+
   i {
     font-size: 3rem;
     display: flex;
     justify-content: center;
   }
- 
+
   div {
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin: 5vw;
   }
- 
+
   h2 {
     color: $squash;
   }
@@ -31,11 +31,8 @@
 
 /* Portrait tablet & landscape phone */
 @include media-md {
-  
   .links {
     flex-direction: row;
     height: 40vh;
   }
 }
-
-
