--- a/styles/scss/_mission.scss
+++ b/styles/scss/_mission.scss
@@ -1,20 +1,19 @@
 .mission {
   background-color: $lightGrey;
   flex-direction: column;
-  
+
   @include section-styling;
-  
+
   &-text {
     @include text-styling;
   }
 
   &-img {
-    @include image-styling("https://maclapinski.github.io/Bikerland/assets/image-7.jpg");
+    @include image-styling('/assets/image-7.avif');
   }
 }
 
 @include media-lg {
-
   .mission {
     flex-direction: row;
 
@@ -34,7 +33,6 @@
 }
 
 @include media-xxl {
-  
   .mission {
     flex-direction: row;
 
@@ -48,4 +46,3 @@
     }
   }
 }
-
