--- a/styles/scss/_nav-and-header.scss
+++ b/styles/scss/_nav-and-header.scss
@@ -14,7 +14,7 @@ header {
   text-align: center;
 
   &::before {
-    background: url(/assets/image-1-mobile@2x.avif) no-repeat center center;
+    background: url(/assets/image-1-mobile_2x.avif) no-repeat center center;
     background-color: white;
     background-size: cover;
     content: ' ';
